fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -9,5 +9,10 @@
 	text-rendering: optimizeLegibility;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+}
+
+body,
+html {
+	max-width: 100%;
 	overflow-x: hidden;
 }
